Fix search box layout on mobile

--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -15,6 +15,15 @@ div.organization {
   margin-top: 10px;
   min-height: 150px;
 }
+
+.form-search {
+  width: 100%;
+
+  .search-query {
+    width: 68%;
+  }
+}
+
 .organization-content {
   .url {
     position: relative;
